Fix align

--- a/assets/scss/align/$aligns.scss
+++ b/assets/scss/align/$aligns.scss
@@ -6,6 +6,6 @@ $aligns: (
 );
 $v-aligns: (
     middle,
-    start,
-    end
+    top,
+    bottom
 );
